progressed with js

--- a/NCloud/NCloud/Views/_ViewImports.cshtml
+++ b/NCloud/NCloud/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using NCloud.Security
 @using NCloud.Models
 @using NCloud.Models.Extensions
+@using Newtonsoft.Json;
 @addTagHelper *, DNTCaptcha.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
