--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -31,34 +31,34 @@
                                 <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
                                 <table class="table table-striped rounded">
                                     <tr>
-                                        <td class="ps-3">
+                                        <td class="ps-3 w-25 text-break">
                                             Created By
                                         </td>
-                                        <td>
+                                        <td class="text-break">
                                             @User.Identity?.Name
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="ps-3">
+                                        <td class="ps-3 w-25 text-break">
                                             Created Time
                                         </td>
-                                        <td>
+                                        <td class="text-break">
                                             @item.Info.CreationTime
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="ps-3">
+                                        <td class="ps-3 w-25 text-break">
                                             Last Modified Time
                                         </td>
-                                        <td>
+                                        <td class="text-break">
                                             @item.Info.LastWriteTime
                                         </td>
                                     </tr>
                                     <tr class="align-middle">
-                                        <td class="ps-3">
+                                        <td class="ps-3 w-25 text-break">
                                             Shared in @Constants.AppName
                                         </td>
-                                        <td id="@(++counter)_app">
+                                        <td id="@(++counter)_app" class="text-break">
                                             @if (item.IsConnectedToApp)
                                             {
                                                 <img class="p-2 bg-primary rounded-circle" src="/utilities/connected.svg" width="50" height="50" />
@@ -70,17 +70,17 @@
                                         </td>
                                     </tr>
                                     <tr class="align-middle">
-                                        <td class="ps-3">
+                                        <td class="ps-3 w-25 text-break">
                                             Public
                                         </td>
-                                        <td id="@(counter)_web">
+                                        <td class="text-break">
                                             @if (item.IsConnectedToWeb)
                                             {
-                                                <img class="p-2 bg-primary rounded-circle" src="/utilities/connected.svg" width="50" height="50" />
+                                                <img id="@(counter)_web" class="p-2 bg-primary rounded-circle" src="/utilities/connected.svg" width="50" height="50" />
                                             }
                                             else
                                             {
-                                                <img class="p-2 bg-danger rounded-circle" src="/utilities/disconnected.svg" width="50" height="50" />
+                                                <img id="@(counter)_web" class="p-2 bg-danger rounded-circle" src="/utilities/disconnected.svg" width="50" height="50" />
                                             }
                                         </td>
                                     </tr>
@@ -89,15 +89,15 @@
                                         string? url = Url.Action(Model.WebControllerAndActionForDetails.Second, Model.WebControllerAndActionForDetails.First, new { path = item.HashedPath }, Context.Request.Scheme);
                                     }
 
-                                    <tr class="align-middle" id="@(counter)_tr1">
-                                        <td>
+                                    <tr class="align-middle @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_tr1">
+                                        <td class="w-25 text-break">
                                             <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard(@url)"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
                                         </td>
-                                        <td>
+                                        <td class="text-break">
                                             <a href="@url" class="text-decoration-none" target="_blank">@url</a>
                                         </td>
                                     </tr>
-                                    <tr id="@(counter)_tr2">
+                                    <tr class="@(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_tr2">
                                         <td colspan="2" class="text-center">
                                             <img src="@CloudQRManager.GenerateQRCodeString(url)" height="100" width="100" class="rounded" />
                                         </td>
@@ -106,24 +106,21 @@
                             </fieldset>
                             <div class="d-flex justify-content-end">
                                 <div class="btn-group mx-2" role="group">
-                                    @if (item.IsConnectedToWeb)
-                                    {
-                                        <button type="button" onclick="disConnectDirectoryFromWeb('@Url.Action("DisConnectDirectoryFromWeb", "Drive")', '@item.Info.Name', '@counter')" class="btn btn-primary">
-                                            <img src="~/utilities/nopublic.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo" />
-                                            <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner">
-                                                <span class="visually-hidden">Loading...</span>
-                                            </div>
-                                        </button>
-                                    }
-                                    else
-                                    {
-                                        <button type="button" onclick="connectDirectoryToWeb('@Url.Action("ConnectDirectoryToWeb", "Drive")','@item.Info.Name', '@counter')" class="btn btn-primary">
-                                            <img src="~/utilities/public.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo" />
-                                            <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner">
-                                                <span class="visually-hidden">Loading...</span>
-                                            </div>
-                                        </button>
-                                    }
+
+                                    <button class="btn btn-primary @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_btnDisConnect" type="button" onclick="disConnectDirectoryFromWeb('@Url.Action("DisConnectDirectoryFromWeb", "Drive")', '@item.Info.Name', '@counter')">
+                                        <img src="~/utilities/nopublic.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo" />
+                                        <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </button>
+
+                                    <button class="btn btn-primary @(item.IsConnectedToWeb ? "hidden" : "")" id="@(counter)_btnConnect" type="button" onclick="connectDirectoryToWeb('@Url.Action("ConnectDirectoryToWeb", "Drive")','@item.Info.Name', '@counter')">
+                                        <img src="~/utilities/public.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo" />
+                                        <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </button>
+
                                     @if (item.IsConnectedToApp)
                                     {
                                         <a asp-controller="Drive" class="btn btn-secondary " asp-action="DisconnectDirectoryFromApp" asp-route-directoryName="@item.Info.Name"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded align-middle" /></a>
@@ -263,6 +260,8 @@
         }
     </tbody>
 </table>
+
+@await Component.InvokeAsync("NotificationSingle")
 
 <script type="text/javascript">
     function copyToClipBoard(url) {
