--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -261,7 +261,7 @@
     </tbody>
 </table>
 
-@await Component.InvokeAsync("NotificationSingle")
+@await Component.InvokeAsync("CloudNotificationSingle")
 
 <script type="text/javascript">
     function copyToClipBoard(url) {
