--- a/NCloud/NCloud/Views/Shared/Components/CloudNotificationSingle/NotificationSingle.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/CloudNotificationSingle/NotificationSingle.cshtml
@@ -1,29 +1,22 @@
 ﻿
 <div class="toast-container position-absolute bottom-0 end-0 p-3">
-    <div class="toast @(notification.Color)" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
-        <div class="toast-header @(notification.Color)">
-            <img src="@notification.Image" class="rounded me-2">
-            <strong class="me-auto text-dark">@notification.Title</strong>
+    <div class="toast bg-success" id="toast_success" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
+        <div class="toast-header bg-success">
+            <img src="/utilities/success.svg" class="rounded me-2">
+            <strong class="me-auto text-dark" id="success_title"></strong>
             <small class="text-bold text-dark">just now</small>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
-        <div class="toast-body">
-            @notification.Text
+        <div class="toast-body" id="success_body"></div>
+    </div>
+
+    <div class="toast bg-danger" id="toast_error" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
+        <div class="toast-header bg-danger">
+            <img src="/utilities/error.svg" class="rounded me-2">
+            <strong class="me-auto text-dark" id="error_title"></strong>
+            <small class="text-bold text-dark">just now</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
+        <div class="toast-body" id="error_body"></div>
     </div>
 </div>
-<script type="text/javascript">
-
-    function ShowNotifications(dilation) {
-        const toasts = document.getElementsByClassName('toast');
-        for (let i = 0; i < toasts.length; i++) {
-            setTimeout(() => {
-                let toast = new bootstrap.Toast(toasts[i]);
-                toast.show();
-            }, i * dilation);
-        }
-    }
-
-    ShowNotifications(300);
-</script>
-}
