--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -18,6 +18,7 @@
         {
             if (item != null)
             {
+                ++counter;
                 <tr>
                     <td>
                         <details>
@@ -58,14 +59,14 @@
                                         <td class="ps-3 w-25 text-break">
                                             Shared in @Constants.AppName
                                         </td>
-                                        <td id="@(++counter)_app" class="text-break">
+                                        <td class="text-break">
                                             @if (item.IsConnectedToApp)
                                             {
-                                                <img class="p-2 bg-primary rounded-circle" src="/utilities/connected.svg" width="50" height="50" />
+                                                <img id="@(counter)_app" class="p-2 bg-primary rounded-circle" src="/utilities/connected.svg" width="50" height="50" />
                                             }
                                             else
                                             {
-                                                <img class="p-2 bg-danger rounded-circle" src="/utilities/disconnected.svg" width="50" height="50" />
+                                                <img id="@(counter)_app" class="p-2 bg-danger rounded-circle" src="/utilities/disconnected.svg" width="50" height="50" />
                                             }
                                         </td>
                                     </tr>
@@ -106,30 +107,36 @@
                             </fieldset>
                             <div class="d-flex justify-content-end">
                                 <div class="btn-group mx-2" role="group">
-
-                                    <button class="btn btn-primary @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_btnDisConnect" type="button" onclick="disConnectDirectoryFromWeb('@Url.Action("DisConnectDirectoryFromWeb", "Drive")', '@item.Info.Name', '@counter')">
-                                        <img src="~/utilities/nopublic.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo" />
-                                        <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner">
-                                            <span class="visually-hidden">Loading...</span>
-                                        </div>
-                                    </button>
-
-                                    <button class="btn btn-primary @(item.IsConnectedToWeb ? "hidden" : "")" id="@(counter)_btnConnect" type="button" onclick="connectDirectoryToWeb('@Url.Action("ConnectDirectoryToWeb", "Drive")','@item.Info.Name', '@counter')">
-                                        <img src="~/utilities/public.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo" />
-                                        <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner">
-                                            <span class="visually-hidden">Loading...</span>
-                                        </div>
-                                    </button>
-
-                                    @if (item.IsConnectedToApp)
-                                    {
-                                        <a asp-controller="Drive" class="btn btn-secondary " asp-action="DisconnectDirectoryFromApp" asp-route-directoryName="@item.Info.Name"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded align-middle" /></a>
-                                    }
-                                    else
-                                    {
-                                        <a asp-controller="Drive" class="btn btn-secondary " asp-action="ConnectDirectoryToApp" asp-route-directoryName="@item.Info.Name"><img src="~/utilities/share.svg" width=" 20" height="20" class="rounded align-middle" /></a>
-                                    }
                                     <a asp-controller="Drive" class="btn btn-secondary " asp-action="Settings" asp-route-id="@item.Info.Name"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+
+                                    <button class="btn btn-primary @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_btnDisConnectDirWeb" type="button" onclick="disConnectDirectoryFromWeb('@Url.Action("DisConnectDirectoryFromWeb", "Drive")', '@item.Info.Name', '@counter')">
+                                        <img src="~/utilities/nopublic.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_1" />
+                                        <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_1">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </button>
+
+                                    <button class="btn btn-primary @(item.IsConnectedToWeb ? "hidden" : "")" id="@(counter)_btnConnectDirWeb" type="button" onclick="connectDirectoryToWeb('@Url.Action("ConnectDirectoryToWeb", "Drive")','@item.Info.Name', '@counter')">
+                                        <img src="~/utilities/public.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_2" />
+                                        <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_2">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </button>
+
+                                    <button class="btn btn-primary @(item.IsConnectedToApp ? "" : "hidden")" id="@(counter)_btnDisConnectDirApp" type="button" onclick="disConnectDirectoryFromApp('@Url.Action("DisConnectDirectoryFromApp", "Drive")', '@item.Info.Name', '@counter')">
+                                        <img src="~/utilities/noshare.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_3" />
+                                        <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_3">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </button>
+
+                                    <button class="btn btn-primary @(item.IsConnectedToApp ? "hidden" : "")" id="@(counter)_btnConnectDirApp" type="button" onclick="connectDirectoryToApp('@Url.Action("ConnectDirectoryToApp", "Drive")','@item.Info.Name', '@counter')">
+                                        <img src="~/utilities/share.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_4" />
+                                        <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_4">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </button>
+
                                     <a asp-controller="Drive" class="btn btn-danger " asp-action="DeleteFolder" asp-route-folderName="@item.Info.Name"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                                 </div>
                             </div>
@@ -142,6 +149,7 @@
         {
             if (item != null)
             {
+                ++counter;
                 <tr>
                     <td>
                         <details>
@@ -193,11 +201,11 @@
                                         <td>
                                             @if (item.IsConnectedToApp)
                                             {
-                                                <img class="p-2 bg-primary rounded-circle" src="/utilities/connected.svg" width="50" height="50" />
+                                                <img id="@(counter)_app" class="p-2 bg-primary rounded-circle" src="/utilities/connected.svg" width="50" height="50" />
                                             }
                                             else
                                             {
-                                                <img class="p-2 bg-danger rounded-circle" src="/utilities/disconnected.svg" width="50" height="50" />
+                                                <img id="@(counter)_app" class="p-2 bg-danger rounded-circle" src="/utilities/disconnected.svg" width="50" height="50" />
                                             }
                                         </td>
                                     </tr>
@@ -208,48 +216,66 @@
                                         <td>
                                             @if (item.IsConnectedToWeb)
                                             {
-                                                <img class="p-2 bg-primary rounded-circle" src="/utilities/connected.svg" width="50" height="50" />
+                                                <img id="@(counter)_web" class="p-2 bg-primary rounded-circle" src="/utilities/connected.svg" width="50" height="50" />
                                             }
                                             else
                                             {
-                                                <img class="p-2 bg-danger rounded-circle" src="/utilities/disconnected.svg" width="50" height="50" />
+                                                <img id="@(counter)_web" class="p-2 bg-danger rounded-circle" src="/utilities/disconnected.svg" width="50" height="50" />
                                             }
                                         </td>
                                     </tr>
-                                    @if (item.IsConnectedToWeb)
-                                    {
-                                        string? url = Url.Action(Model.WebControllerAndActionForDownload.Second, Model.WebControllerAndActionForDownload.First, new { path = System.IO.Path.Combine(Model.CurrentPath, item.Info.Name) }, Context.Request.Scheme);
-                                        <tr class="align-middle">
-                                            <td>
-                                                <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard(@url)"><span>Download</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
-                                            </td>
-                                            <td>
-                                                <a href="@url" class="text-decoration-none" target="_blank">@url</a>
-                                            </td>
-                                        </tr>
+                                    @{
+                                        string? url = Url.Action(Model.WebControllerAndActionForDownload.Second, Model.WebControllerAndActionForDownload.First, new { path = item.HashedPath }, Context.Request.Scheme);
                                     }
+
+                                    <tr class="align-middle @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_tr1">
+                                        <td class="w-25 text-break">
+                                            <button type="button" class="btn btn-outline-dark" onclick="copyToClipBoard(@url)"><span>Url</span><img src="/utilities/link.svg" width=" 20" height="20" class="ms-2 item rounded align-center"></button>
+                                        </td>
+                                        <td class="text-break">
+                                            <a href="@url" class="text-decoration-none" target="_blank">@url</a>
+                                        </td>
+                                    </tr>
+                                    <tr class="@(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_tr2">
+                                        <td colspan="2" class="text-center">
+                                            <img src="@CloudQRManager.GenerateQRCodeString(url)" height="100" width="100" class="rounded" />
+                                        </td>
+                                    </tr>
                                 </table>
                             </fieldset>
                             <div class="d-flex justify-content-end">
                                 <div class="btn-group mx-2" role="group">
-                                    @if (item.IsConnectedToWeb)
-                                    {
-                                        <a asp-controller="Drive" class="btn btn-primary " asp-action="DisconnectFileFromWeb" asp-route-fileName="@item.Info.Name"><img src="~/utilities/nopublic.svg" width=" 20" height="20" class="rounded align-middle" /></a>
-                                    }
-                                    else
-                                    {
-                                        <a asp-controller="Drive" class="btn btn-primary " asp-action="ConnectFileToWeb" asp-route-fileName="@item.Info.Name"><img src="~/utilities/public.svg" width=" 20" height="20" class="rounded align-middle" /></a>
-                                    }
-                                    @if (item.IsConnectedToApp)
-                                    {
-                                        <a asp-controller="Drive" class="btn btn-secondary " asp-action="DisconnectFileFromApp" asp-route-fileName="@item.Info.Name"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded align-middle" /></a>
-                                    }
-                                    else
-                                    {
-                                        <a asp-controller="Drive" class="btn btn-secondary " asp-action="ConnectFileToApp" asp-route-fileName="@item.Info.Name"><img src="~/utilities/share.svg" width=" 20" height="20" class="rounded align-middle" /></a>
-                                    }
-                                    <a asp-controller="Editor" class="btn btn-secondary" asp-action="Index" asp-route-fileName="@item.Info.Name"><img src="~/utilities/code-slash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                                     <a asp-controller="Drive" class="btn btn-secondary" asp-action="Settings" asp-route-id="@item.Info.Name"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+                                    
+                                    <button class="btn btn-primary @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_btnDisConnectFileWeb" type="button" onclick="disConnectFileFromWeb('@Url.Action("DisConnectFileFromWeb", "Drive")', '@item.Info.Name', '@counter')">
+                                        <img src="~/utilities/nopublic.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_1" />
+                                        <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_1">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </button>
+
+                                    <button class="btn btn-primary @(item.IsConnectedToWeb ? "hidden" : "")" id="@(counter)_btnConnectFileWeb" type="button" onclick="connectFileToWeb('@Url.Action("ConnectFileToWeb", "Drive")','@item.Info.Name', '@counter')">
+                                        <img src="~/utilities/public.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_2" />
+                                        <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_2">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </button>
+
+                                    <button class="btn btn-primary @(item.IsConnectedToApp ? "" : "hidden")" id="@(counter)_btnDisConnectFileApp" type="button" onclick="disConnectFileFromApp('@Url.Action("DisConnectFileFromApp", "Drive")', '@item.Info.Name', '@counter')">
+                                        <img src="~/utilities/noshare.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_3" />
+                                        <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_3">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </button>
+
+                                    <button class="btn btn-primary @(item.IsConnectedToApp ? "hidden" : "")" id="@(counter)_btnConnectFileApp" type="button" onclick="connectFileToApp('@Url.Action("ConnectFileToApp", "Drive")','@item.Info.Name', '@counter')">
+                                        <img src="~/utilities/share.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_4" />
+                                        <div class="spinner-border spinner-border-sm text-dark hidden mx-1" role="status" id="@(counter)_spinner_4">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </button>
+
+                                    <a asp-controller="Editor" class="btn btn-secondary" asp-action="Index" asp-route-fileName="@item.Info.Name"><img src="~/utilities/code-slash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                                     <a asp-controller="Drive" class="btn btn-danger" asp-action="DeleteFile" asp-route-id="@item.Info.Name"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                                 </div>
                             </div>
@@ -260,8 +286,6 @@
         }
     </tbody>
 </table>
-
-@await Component.InvokeAsync("CloudNotificationSingle")
 
 <script type="text/javascript">
     function copyToClipBoard(url) {
