progressed with web controller

--- a/NCloud/NCloud/Views/Sharing/Details.cshtml
+++ b/NCloud/NCloud/Views/Sharing/Details.cshtml
@@ -11,7 +11,7 @@
                 <ol class="breadcrumb">
                     @foreach (string item in Model.CurrentPath.Split("/", StringSplitOptions.RemoveEmptyEntries))
                     {
-                        <li class="breadcrumb-item text-dark" aria-current="page">@item</li>
+                        <li class="breadcrumb-item text-darkeybinding fw-bold" aria-current="page">@item</li>
                     }
                 </ol>
             </nav>
