--- a/NCloud/NCloud/Views/Drive/Details.cshtml
+++ b/NCloud/NCloud/Views/Drive/Details.cshtml
@@ -11,7 +11,7 @@
                 <ol class="breadcrumb">
                     @foreach (string item in Model.CurrentPathShow.Split("/", StringSplitOptions.RemoveEmptyEntries))
                     {
-                        <li class="breadcrumb-item text-dark" aria-current="page">@item</li>
+                        <li class="breadcrumb-item text-dark fw-bold" aria-current="page">@item</li>
                     }
                 </ol>
             </nav>
