--- a/NCloud/NCloud/Views/Shared/Components/WebDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/WebDetailsTable/Table.cshtml
@@ -20,7 +20,7 @@
                                     <span id="iconforitemtype">
                                         <img src="@item.IconPath" width="20" height="20" class="item align-bottom">
                                     </span>
-                                    <a asp-action="Details" asp-route-folderName="@item.Info!.Name" class="itemlink">@item.Info.Name</a>
+                                    <a asp-action="Details" asp-route-path="@Model.CurrentPath" asp-route-folderName="@item.Info!.Name" class="itemlink">@item.Info.Name</a>
                                 </summary>
                                 <fieldset class="border border-dark p-2 m-2 rounded">
                                     <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
@@ -51,7 +51,7 @@
                                 <span id="iconforitemtype">
                                     <img src="@item.IconPath" width="20" height="20" class="item align-bottom">
                                 </span>
-                                <a asp-action="Details" asp-route-folderName="@item.SharedName" class="itemlink">@item.SharedName</a>
+                                <a asp-action="Details" asp-route-path="@Model.CurrentPath" asp-route-folderName="@item.SharedName" class="itemlink">@item.SharedName</a>
                             </div>
                         }
                     </td>
@@ -71,7 +71,7 @@
                                     <span id="iconforitemtype">
                                         <img src="@item.IconPath" width="20" height="20" class="item align-bottom">
                                     </span>
-                                    <a asp-action="Details" asp-route-folderName="@item.Info!.Name" class="itemlink">@item.Info.Name</a>
+                                    <span class="itemlink">@item.Info.Name</span>
                                 </summary>
                                 <fieldset class="border border-dark p-2 m-2 rounded">
                                     <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
@@ -110,7 +110,7 @@
                                 <span id="iconforitemtype">
                                     <img src="@item.IconPath" width="20" height="20" class="item align-bottom">
                                 </span>
-                                <a asp-action="Details" asp-route-folderName="@item.SharedName" class="itemlink">@item.SharedName</a>
+                                <a asp-action="Details" asp-route-path="@Model.CurrentPath" asp-route-folderName="@item.SharedName" class="itemlink">@item.SharedName</a>
                             </div>
                         }
                     </td>
@@ -119,3 +119,8 @@
         }
     </tbody>
 </table>
+
+@if(Model.Files?.Count == 0 && Model.Folders?.Count == 0)
+{
+    <span class="w-100 d-flex justify-content-center text-muted fst-italic">No shared items</span>
+}
