--- a/NCloud/NCloud/Views/Web/Details.cshtml
+++ b/NCloud/NCloud/Views/Web/Details.cshtml
@@ -5,24 +5,14 @@
 }
 
 <div>
-    <div class="background-color rounded w-100 px-3 pt-4 pb-1" id="breadcrumbDiv">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                @foreach (string item in Model.CurrentPath.Split(System.IO.Path.DirectorySeparatorChar, StringSplitOptions.RemoveEmptyEntries))
-                {
-                    <li class="breadcrumb-item text-dark fw-bold" aria-current="page">@item</li>
-                }
-            </ol>
-        </nav>
-    </div>
-    <div class="d-flex justify-content-between mt-2">
+    <div class="d-flex justify-content-between mt-2 bg-secondary rounded">
         <div class="">
-            <a class="btn btn-primary" asp-controller="Web" asp-action="Back"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+            <a class="btn btn-primary" asp-route-path="@Model.CurrentPath" asp-controller="Web" asp-action="Back"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
         </div>
         <div class="">
             <div class="btn-group" role="group">
-                <a class="btn btn-primary" asp-controller="Web" asp-action="Details"><img src="~/utilities/arrow-repeat.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
-                <a class="btn btn-primary" asp-controller="Web" asp-action="DownloadItems"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
+                <a class="btn btn-primary" asp-route-path="@Model.CurrentPath" asp-controller="Web" asp-action="Details"><img src="~/utilities/arrow-repeat.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
+                <a class="btn btn-primary" asp-route-path="@Model.CurrentPath" asp-controller="Web" asp-action="DownloadItems"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
             </div>
         </div>
     </div>
