proceeded with web controller and fixed download

--- a/NCloud/NCloud/Views/Web/DownloadItems.cshtml
+++ b/NCloud/NCloud/Views/Web/DownloadItems.cshtml
@@ -1,4 +1,4 @@
-﻿@model DriveDownloadViewModel
+﻿@model WebSingleDownloadViewModel
 
 @{
     ViewData["title"] = "Download";
@@ -6,11 +6,12 @@
 }
 
 <div class="d-flex justify-content-between w-100 bg-secondary rounded">
-    <a asp-action="Details" asp-controller="Drive" class="btn btn-primary"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+    <a asp-action="Details" asp-controller="Web" asp-route-path="@Model.Path" class="btn btn-primary"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
     <span class="btn"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" /></span>
 </div>
 
 <form asp-action="DownloadItems">
+    <input type="hidden" asp-for="Path" />
     <table class="table">
         <thead>
             <tr>
