--- a/NCloud/NCloud/Views/Web/DownloadPage.cshtml
+++ b/NCloud/NCloud/Views/Web/DownloadPage.cshtml
@@ -1,13 +1,13 @@
 ﻿@model WebSingleDownloadViewModel
 
 <div class="row">
-    <div class="col-auto">
-
+    <div class="w-100 justify-content-center text-center">
+        <img src="/utilities//cloud_logo.png" class=""  width="200"/>
     </div>
-    <div>
-        <span>@System.IO.Path.Combine(Model.Path,Model.FileName)</span>
+    <div class="col-auto w-100 mb-5 justify-content-center text-center">
+        <span>@Model.FileName</span>
     </div>
-    <div class="col-auto">
-        <a asp-controller="Web" class="btn btn-primary" asp-action="DownloadFile" asp-route-path="@Model.Path" asp-route-fileName="@Model.FileName"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download /></a>
+    <div class="w-100 justify-content-center text-center">
+        <a asp-controller="Web" class="btn btn-primary" asp-action="DownloadSingleItem" asp-route-path="@Model.Path" asp-route-fileName="@Model.FileName"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download id="downloadRef"/></a>
     </div>
 </div>
