bug fixed for file sharing

--- a/NCloud/NCloud/Views/DashBoard/Index.cshtml
+++ b/NCloud/NCloud/Views/DashBoard/Index.cshtml
@@ -30,7 +30,7 @@
 
             <div class="list-group list-group-horizontal mb-1">
                 <button type="button" class="btn btn-outline-secondary" onclick="copyToClipBoard(@(++counter))"><img src="/utilities/link.svg" width=" 20" height="20" class="item rounded align-center"></button>
-                <a href="@url" id="@counter" class="list-group-item list-group-item-action text-primary" target="_blank">@url</a>
+                <a href="@url" id="@counter" class="list-group-item list-group-item-action text-primary" target="_blank">Link to shared directory</a>
             </div>
         }
     </div>
@@ -47,7 +47,7 @@
 
         <div class="list-group list-group-horizontal mb-1">
             <button type="button" class="btn btn-outline-secondary" onclick="copyToClipBoard(@(++counter))"><img src="/utilities/link.svg" width=" 20" height="20" class="item rounded align-center"></button>
-            <a href="@url" id="counter" class="list-group-item list-group-item-action text-primary" target="_blank">@url</a>
+            <a href="@url" id="counter" class="list-group-item list-group-item-action text-primary" target="_blank">Link to shared file</a>
         </div>
     }
 </div>
