--- a/NCloud/NCloud/Views/Web/DownloadItems.cshtml
+++ b/NCloud/NCloud/Views/Web/DownloadItems.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebDownloadViewModel
 
 @{
-    ViewData["title"] = "Download";
+    ViewData["title"] = "Download Items";
     int i = 0;
 }
 
