--- a/NCloud/NCloud/Views/Web/DownloadPage.cshtml
+++ b/NCloud/NCloud/Views/Web/DownloadPage.cshtml
@@ -1,10 +1,14 @@
 ﻿@model WebSingleDownloadViewModel
 
+@{
+    ViewData["Title"] = "Download File";
+}
+
 <div class="row">
     <div class="w-100 justify-content-center text-center">
-        <img src="/utilities//cloud_logo.png" class=""  width="200"/>
+        <img src="/utilities//cloud_logo.png" class="img-fluid" width="200" />
     </div>
-    <div class="col-auto w-100 mb-5 justify-content-center text-center">
+    <div class="col-auto w-100 mb-5 justify-content-center text-center fw-bold">
         <span>@Model.FileName</span>
     </div>
     <div class="w-100 justify-content-center text-center">
