--- a/NCloud/NCloud/Views/Sharing/DownloadItems.cshtml
+++ b/NCloud/NCloud/Views/Sharing/DownloadItems.cshtml
@@ -14,7 +14,12 @@
     <table class="table">
         <thead>
             <tr>
-                <th></th>
+                <th>
+                    @if (Model.ItemsForDownload?.Count == 0)
+                    {
+                        <span class="w-100 d-flex justify-content-center text-muted fst-italic">No items</span>
+                    }
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -23,8 +28,10 @@
                 <tr>
                     <td>
                         <div class="d-flex-inline align-middle">
-                            <input type="checkbox" class="form-check-input" id="selectAll" />
-                            <label class="form-check-label ms-2">Select All</label>
+                            <div class="input-group">
+                                <span class="btn btn-outline-secondary" id="selectAll"><img src="~/utilities/check.svg" width=" 20" height="20" class="rounded align-middle" /></span>
+                                <span class="btn btn-outline-secondary" id="deselectAll"><img src="~/utilities/ban.svg" width=" 20" height="20" class="rounded align-middle" /></span>
+                            </div>
                         </div>
                     </td>
                 </tr>
@@ -36,7 +43,7 @@
                     <tr>
                         <td>
                             <div class="d-flex-inline">
-                                <input type="checkbox" asp-for="ItemsForDownload![i]" class="form-check-input" value="@item.Info.Name" />
+                                <input type="checkbox" asp-for="ItemsForDownload![i]" class="form-check-input" value="@($"{Constants.SelectedFolderStarterSymbol}{item.Info.Name}")" />
                                 <span id="iconforitemtype ms-2">
                                     <img src="@item.IconPath" width=" 20" height="20" class="item rounded align-bottom">
                                 </span>
@@ -54,7 +61,7 @@
                     <tr>
                         <td>
                             <div class="d-flex-inline">
-                                <input type="checkbox" asp-for="ItemsForDownload![i]" class="form-check-input" value="@($"_{item.Info.Name}")" />
+                                <input type="checkbox" asp-for="ItemsForDownload![i]" class="form-check-input" value="@($"{Constants.SelectedFileStarterSymbol}{item.Info.Name}")" />
                                 <span id="iconforitemtype ms-2">
                                     <img src="@item.IconPath" width=" 20" height="20" class="item rounded align-bottom">
                                 </span>
@@ -68,26 +75,18 @@
         </tbody>
     </table>
     <div class="d-flex w-100 justify-content-center">
-        <button type="submit" class="btn btn-outline-secondary border border-secondary border-3" id="downloadBtn"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" /></button>
+        <button type="submit" class="btn btn-primary border border-primary border-3" id="downloadBtn"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" /></button>
     </div>
 </form>
 <script type="text/javascript">
     function StartFunction() {
-        document.getElementById("selectAll").addEventListener("click", SelectAllClicked, false)
+        document.getElementById("selectAll").addEventListener("click", SelectAll, false)
+        document.getElementById("deselectAll").addEventListener("click", DeselectAll, false)
         document.getElementById("downloadBtn").addEventListener("click", CallDeselect, false)
     }
 
-    function SelectAllClicked(e) {
-        console.log("belep");
-        if (document.getElementById("selectAll").checked) {
-            SelectAll();
-        } else {
-            DeselectAll();
-        }
-    }
-
-    function CallDeselect(e){
-        setTimeout(DeselectAll,1);
+    function CallDeselect(e) {
+        setTimeout(DeselectAll, 1);
     }
 
     function SelectAll() {
