--- a/NCloud/NCloud/Views/_ViewImports.cshtml
+++ b/NCloud/NCloud/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using NCloud.Security
 @using NCloud.Models
 @using NCloud.Models.Extensions
+@using NCloud.Services;
 @using Newtonsoft.Json;
 @addTagHelper *, DNTCaptcha.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
